# onenote-sync

./: .env.example  .gitignore  Dockerfile  README.md  dockerignore  pyproject.toml  run.sh
app/: main.py
app/api/v1/: router.py
app/api/v1/endpoints/: pipeline.py
app/core/: config.py  logger.py  security.py
app/schemas/: pipeline_status.py
app/services/: content_processor.py  ms_graph_auth.py  onenote_fetcher.py  pipeline_service.py  sharepoint_onenote_fetcher.py
app/storage/: db_handler.py
