[project]
name = "onenote-sync-pipeline"
version = "0.1.0"
description = "A pipeline to process OneNote pages and store them in VectorDB."
authors = [{ name = "Bob", email = "bob@example.com" }]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "loguru>=0.7.2",
    "requests>=2.31.0",
    "python-dotenv>=1.0.1",
    "beautifulsoup4>=4.12.3",
    "psycopg2-binary>=2.9.9",
    "pymilvus>=2.4.1",
    "boto3>=1.34.103",
    "filetype>=1.2.0",
    "pydantic-settings>=2.2.1",
    "langchain-text-splitters>=0.2.1",
]